# regex

./: regex.cabal
src/Text/: Regex.hs
src/Text/Regex/: Core.hs  DFA.hs  NFA.hs  Parser.hs
